--- a/CustomRPC/Strings.nl.resx
+++ b/CustomRPC/Strings.nl.resx
@@ -172,4 +172,10 @@ Druk op Ja om de instellingen te resetten, druk op Nee om te stoppen.</value>
     <value>Staat u toe dat CustomRP uw gebruiksanalyses naar de ontwikkelaar stuurt?
 (Alle gegevens zijn gedepersonaliseerd.)</value>
   </data>
+  <data name="errorSavingSettings" xml:space="preserve">
+    <value>Er is een fout opgetreden bij het opslaan van de instellingen:</value>
+  </data>
+  <data name="errorLoadingAssembly" xml:space="preserve">
+    <value>Voeg het pad "{0}" toe aan de uitzonderingen van uw antivirusprogramma. Installeer CustomRP opnieuw als deze fout zich blijft voordoen.</value>
+  </data>
 </root>
