--- a/CustomRPC/MainForm.resx
+++ b/CustomRPC/MainForm.resx
@@ -1360,7 +1360,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>Name of the asset for small image.</value>
+    <value>Name of the asset for small image or an image URL.</value>
   </data>
   <data name="&gt;&gt;labelSmallKey.Name" xml:space="preserve">
     <value>labelSmallKey</value>
@@ -1462,7 +1462,7 @@
     <comment>@Invariant</comment>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>Name of the asset for large image.</value>
+    <value>Name of the asset for large image or an image URL.</value>
   </data>
   <data name="&gt;&gt;labelLargeKey.Name" xml:space="preserve">
     <value>labelLargeKey</value>
