--- a/CustomRPC/MainForm.ja.resx
+++ b/CustomRPC/MainForm.ja.resx
@@ -302,7 +302,7 @@
     <value>186, 22</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Text" xml:space="preserve">
-    <value>マニュアルを見る</value>
+    <value>マニュアルを開く</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>186, 22</value>
@@ -426,7 +426,7 @@
   </data>
   <data name="labelTimestamp.ToolTip" xml:space="preserve">
     <value>ステータスのタイムスタンプを設定。
-	ステータスタイマーには24時間の制限があり、24時間が経過すると0:00に戻ってしまいます。</value>
+ステータスタイマーには24時間の制限があり、24時間が経過すると0:00に戻ってしまいます。</value>
   </data>
   <data name="labelParty.ToolTip" xml:space="preserve">
     <value>Stateの隣に表示される、現在パーティーに参加しているプレーヤーの数。
@@ -479,5 +479,11 @@
   </data>
   <data name="darkModeToolStripMenuItem.Text" xml:space="preserve">
     <value>ダークモード</value>
+  </data>
+  <data name="labelSmallKey.ToolTip" xml:space="preserve">
+    <value>小さい画像のアセット名 または画像のURL。</value>
+  </data>
+  <data name="labelLargeKey.ToolTip" xml:space="preserve">
+    <value>大きい画像のアセット名 または画像のURL。</value>
   </data>
 </root>
