--- a/CustomRPC/MainForm.he.resx
+++ b/CustomRPC/MainForm.he.resx
@@ -449,4 +449,10 @@
   <data name="darkModeToolStripMenuItem.Text" xml:space="preserve">
     <value>מצב כהה</value>
   </data>
+  <data name="labelSmallKey.ToolTip" xml:space="preserve">
+    <value>השם של התוסף בשביל תמונה קטנה או לינק לתמונה</value>
+  </data>
+  <data name="labelLargeKey.ToolTip" xml:space="preserve">
+    <value>השם של התוסף בשביל גדולה קטנה או לינק לתמונה</value>
+  </data>
 </root>
