--- a/CustomRPC/MainForm.lt.resx
+++ b/CustomRPC/MainForm.lt.resx
@@ -411,4 +411,10 @@ Kad abu laukai įsigaliotų, jie turėtų būti didesni nei 0.</value>
   <data name="darkModeToolStripMenuItem.Text" xml:space="preserve">
     <value>Tamsusis režimas</value>
   </data>
+  <data name="labelSmallKey.ToolTip" xml:space="preserve">
+    <value>Mažo paveiksliuko pavadinimas arba vaizdo URL.</value>
+  </data>
+  <data name="labelLargeKey.ToolTip" xml:space="preserve">
+    <value>Didelio paveiksliuko pavadinimas arba vaizdo URL.</value>
+  </data>
 </root>
